--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "leaflet.markerplayer",
-  "version": "0.2.5",
-  "description": "A Leaflet plug-in for animating marker with ability to set progress",
-  "main": "dist/leaflet.markerplayer.min.js",
+  "version": "0.2.6",
+  "description": "A Leaflet plug-in for animating marker with ability to get/set progress",
+  "main": "dist/markerplayer-src.js",
+  "module": "dist/markerplayer-src.esm.js",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --watch --config webpack.dev.js",
-    "prepublish": "webpack --config webpack.prod.js"
+    "build": "npm run rollup && npm run uglify",
+	"watch": "rollup -w -c build/rollup.config.mjs",
+    "rollup": "rollup -c build/rollup.config.mjs",
+    "uglify": "uglifyjs dist/markerplayer-src.js -c -m -o dist/markerplayer.js --source-map filename=dist/markerplayer.js.map --source-map content=dist/markerplayer-src.js.map --source-map url=markerplayer.js.map --comments"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/0n3byt3/Leaflet.MarkerPlayer.git"
   },
-  "keywords": ["map", "animation", "marker"],
+  "keywords": [
+    "map",
+    "animation",
+    "marker"
+  ],
   "author": "",
   "license": "MIT",
   "bugs": {
@@ -28,8 +34,8 @@
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "rollup": "^3.10.0",
+    "uglify-js": "^3.17.4"
   },
   "peerDependencies": {
     "leaflet": "^1.0.0"
