--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "leaflet.markerplayer",
-  "version": "0.2.6",
+  "version": "0.3.1",
   "description": "A Leaflet plug-in for animating marker with ability to get/set progress",
   "main": "dist/markerplayer-src.js",
   "module": "dist/markerplayer-src.esm.js",
-  "files": [
-    "dist",
-    "src"
-  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npm run rollup && npm run uglify",
-	"watch": "rollup -w -c build/rollup.config.mjs",
+    "watch": "rollup -w -c build/rollup.config.mjs",
     "rollup": "rollup -c build/rollup.config.mjs",
     "uglify": "uglifyjs dist/markerplayer-src.js -c -m -o dist/markerplayer.js --source-map filename=dist/markerplayer.js.map --source-map content=dist/markerplayer-src.js.map --source-map url=markerplayer.js.map --comments"
   },
@@ -33,11 +29,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/jest": "^29.4.0",
     "babel-loader": "^9.1.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.10.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5",
     "uglify-js": "^3.17.4"
   },
   "peerDependencies": {
     "leaflet": "^1.0.0"
+  },
+  "dependencies": {
+    "@types/leaflet": "^1.9.0",
+    "tslib": "^2.5.0"
   }
 }
